# lab_day08

./: .gitignore  README.md  main.py  pyproject.toml
lab/: .env.example  PLAN.md  eval.py  grading_runner.py  index.py  rag_answer.py  requirements.txt  test_sla_change.py
lab/data/: grading_questions.json
lab/docs/: architecture.md  tuning-log.md
lab/reports/: group_report.md
lab/reports/individual/: LeTrungAnhQuoc_2A202600108.md  NguyenVanThach_2A202600237.md  TranThaiThinh_2A202600310.md
